examples/good/17-function-variable.tx
fun main(): Void {

  fun test(b: Int): Int {
    return b;
  }

  var a: (Int) -> Int = test;

  printInt(a(1));

  return;
}