examples/bad/08-invalid-application.tx
fun main(): Void {
    var x: Int = 4;
    var y: Int = G;
    return;
}